--- a/interface/styl/interface.styl
+++ b/interface/styl/interface.styl
@@ -1,11 +1,65 @@
-$site_bg = #262626;
-$site_text_color = #fff;
-$tools_sidebar_width = 300;
+@charset "utf-8";
+
+/*!----------------------------------------*/
+
+$body_scroll_color = #676767;
+$body_bg = #fff;
+$body_color = #fff;
+$body_font_size = 14px;
+$body_font_family = Arial, Helvetica, sans-serif;
+$tools_sidebar_width = 300px;
+$tools_sidebar_bg = #4d4d4d;
+$tools_sidebar_border = $body_scroll_color;
+$tools_sidebar_padding = 20px;
+$button_bg = $body_scroll_color;
+$button_radius = 3px;
+
+/*!----------------------------------------*/
+
+*
+	&::-webkit-scrollbar
+		-webkit-appearance none
+
+	&::-webkit-scrollbar:vertical
+		width 8px
+
+	&::-webkit-scrollbar:horizontal
+		height 8px
+
+	&::-webkit-scrollbar-thumb
+		background-color $body_scroll_color
+
+/*!----------------------------------------*/
+
+body
+	background $body_bg
+	color $body_color
+	font-size $body_font_size
+	font-family $body_font_family
 
 #tools_sidebar
+	width $tools_sidebar_width
+	background $tools_sidebar_bg
 	position fixed
 	right 0
 	top 0
 	bottom 0
-	width $tools_sidebar_width
-	background $site_bg
+	overflow-y auto
+	border-left 2px solid $tools_sidebar_border
+	box-sizing border-box
+	padding $tools_sidebar_padding
+
+#work_field
+	padding-right $tools_sidebar_width
+
+
+/*!----------------------------------------*/
+
+button
+	outline none
+	padding 7px 10px
+	background $button_bg
+	color #fff
+	border none
+	font-size 13px
+	border-radius $button_radius
